@@ -1,3 +1,11 @@
+2015-01-30  Alexey Proskuryakov  <ap@apple.com>
+
+        Build fix.
+
+        * Shared/API/c/WKDeprecatedFunctions.cpp:
+        * UIProcess/API/C/WKPreferencesRefPrivate.h:
+        The screen font substitution functions still need to be present in the header.
+
 2015-01-29  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] Resize the redirected XComposite again after leaving accelerated compositing mode
